# Api/Router.go
@@ -5,6 +5,8 @@ import (
 	"Book/Database"
 	_ "Book/docs"
 	"github.com/go-chi/chi"
+	_ "github.com/go-chi/chi/middleware"
+	"github.com/go-chi/cors"
 	httpSwagger "github.com/swaggo/http-swagger"
 	"net/http"
 	"strings"
@@ -20,13 +22,24 @@ func Router() http.Handler {
 	bookController := Controller.NewBookController()
 	categoryController := Controller.NewCategoryController()
 	roleController := Controller.NewRoleController()
+	userController := Controller.NewUserController()
 	//authorization := middleware.NewAuthorizeMiddleware()
 
 	r.Get(basePath+"/swagger/*", httpSwagger.Handler(
 		httpSwagger.URL(Database.HttpSwagger),
 	))
-	r.Route(basePath, func(r chi.Router) {
 
+	r.Route(basePath, func(r chi.Router) {
+		r.Use(cors.Handler(cors.Options{
+			// AllowedOrigins: []string{"https://foo.com"}, // Use this to allow specific origin hosts
+			AllowedOrigins: []string{"*"},
+			// AllowOriginFunc:  func(r *http.Request, origin string) bool { return true },
+			AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+			AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+			ExposedHeaders:   []string{"Link"},
+			AllowCredentials: false,
+			MaxAge:           300, // Maximum value not ignored by any of major browsers
+		}))
 		r.Route("/", func(r chi.Router) {
 			r.Route("/books", func(r chi.Router) {
 				r.Post("/", bookController.CreateBook)
@@ -48,6 +61,15 @@ func Router() http.Handler {
 				r.Put("/{id}", roleController.Update)
 				r.Put("/active/{id}", roleController.Active)
 				r.Put("/deactivate/{id}", roleController.DeActive)
+			})
+			r.Route("/users", func(r chi.Router) {
+				r.Post("/", userController.Create)
+				r.Get("/", userController.GetList)
+				r.Get("/{id}", userController.GetById)
+				//r.Put("/{id}", userController.Update)
+				r.Put("/activate/{id}", userController.Active)
+				r.Put("/deactivate/{id}", userController.DeActive)
+
 			})
 		})
 
